# gnn_slotting_optimization

./: .gitignore  CLAUDE.md  README.md  VALIDATION_RESULTS.md  main.py  model_cpu.pt  pyproject.toml  todo.md
.claude/: settings.local.json
analysis/: l17_distance_model_comparison.md
docs/: benchmark_simulator.md
notebooks/: best_model.pt  final_model.pt  model_augmented.pt  model_cpu.pt  nb copy.ipynb  nb._inference.ipynb  nb.ipynb  optimize_direct.py  optimize_slotting.py  script_inference.py  test_dataset_augmented.pt  test_dataset_cpu.pt  test_marimo.py  test_samples_augmented.pt  test_samples_cpu.pt  train_augmented.py  train_cpu.py  train_cpu_fix_notes.md  train_direct.py  train_l17_instances.py  train_l17_instances_gpu.py  train_validation.py  train_validation_with_augmentation.py
scripts/: benchmark_matrices.py  benchmark_simulator.py
slotting_optimization/: __init__.py  generator.py  gnn_builder.py  instance_loader.py  inverse_optimizer.py  item_locations.py  models.py  order_book.py  simulator.py  warehouse.py
slotting_optimization/validation/: __init__.py  ground_truth.py  scenario.py  tracker.py
tests/: conftest.py  test_combined_matrix.py  test_generator.py  test_generator_optimal.py  test_generator_perf.py  test_gnn_builder.py  test_gnn_builder_3d.py  test_instance_loader.py  test_item_locations.py  test_location_ordering.py  test_matrices.py  test_models.py  test_order_book.py  test_simulator.py  test_simulator_perf.py  test_simulator_sparse.py  test_validation.py  test_warehouse.py
