[project]
name = "gnn-slotting-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.36.1",
    "pyzmq>=27.1.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torch-geometric==2.4.0",
]

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
